# vanpy-sandbox

./: pyproject.toml
src/afastapi/: README.md  cli.py
src/afastapi/api/: app.py  routes.py
src/afastapi/locust/: locustfile.py  locustfile_async.py  locustfile_sync.py  locustfile_tothread.py
